--- a/workflows/metadata.mdx
+++ b/workflows/metadata.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Metadata"
 description: "The Dropstep workflow header."
-icon: "folder-tree"
+icon: "file-circle-info"
 ---
 
 Each Dropstep workflow consists of identifying information at the top of the file. These come in handy for logging and identification of workflows -- either in the web platform or CLI. 
