--- a/workflows/overview.mdx
+++ b/workflows/overview.mdx
@@ -3,12 +3,14 @@ title: "Overview"
 description: "A high-level overview of Dropstep's workflow structure."
 ---
 
-Dropstep workflows are defined in a declarative YAML format (by default `dropstep.yml`). This approach allows us to clearly specify *what* tasks need to be done and how they connect, rather than getting bogged down in imperative scripting for every detail.
+Dropstep workflows are defined in a declarative YAML format (by default `dropstep.yml`). This approach allows us to clearly specify *what* tasks need to be done and how they connect, rather than getting bogged down in imperative scripting for every detail. 
+
+See [Directory Structure](/workflows/directory-structure) for information on how to structure your Dropstep projects.
 
 At a high level, a workflow is made up of:
 
 <CardGroup cols={2}>
-    <Card title="Metadata" icon="folder-tree" href="/workflows/metadata">
+    <Card title="Metadata" icon="file-circle-info" href="/workflows/metadata">
         Essential identifying information for a workflow.
     </Card>
     <Card title="Inputs & Varfiles" icon="file-code" href="/workflows/inputs-varfiles">
