--- a/workflows/overview.mdx
+++ b/workflows/overview.mdx
@@ -1,13 +1,9 @@
 ---
 title: "Overview"
-description: "A high-level overview of Dropstep's workflow structure."
+description: "An overview of Dropstep's workflow structure."
 ---
 
 Dropstep workflows are defined in a declarative YAML format (by default `dropstep.yml`). This approach allows us to clearly specify *what* tasks need to be done and how they connect, rather than getting bogged down in imperative scripting for every detail. 
-
-See [Directory Structure](/workflows/directory-structure) for information on how to structure your Dropstep projects.
-
-At a high level, a workflow is made up of:
 
 <CardGroup cols={2}>
     <Card title="Metadata" icon="file-circle-info" href="/workflows/metadata">
@@ -24,6 +20,9 @@ At a high level, a workflow is made up of:
     </Card>
     <Card title="Steps" icon="person-walking" href="/steps/overview">
         Define behavior and chain complex operations with data handoff between steps.
+    </Card>
+    <Card title="Directory Structure" icon="folder-tree" href="/workflows/directory-structure">
+        Organize your workflow files and supporting files.
     </Card>
 </CardGroup>
 
